# raspexi-viewer-linux

./: .gitignore  AUTHORS  Example_cfg_Nissan.cfg  Example_cfg_Subaru.cfg  Example_cfg_Toyota.cfg  FCLoggerFD3S.xls  FCLoggerNISSAN.xls  LICENSE  Makefile.am  README.md  compile.sh  dashboard.c  helpers.c  helpers.h  install_fonts.sh  main.c  package.sh  powerfc.c  powerfc.h  raspexi.ascii  raspexi.cfg  run.sh
Dashboards/: AUX_800x600.xml  Analogue_Dash.xml  Analogue_Dash_1280_720.xml  Commander.xml  Commander_1280_720.xml  Digital_Dash_1280_720.xml  Digital_Dash_1280_720_Nissan.xml  FD3S_Main_1200x720.xml  FD3S_Main_800x600.xml  FD3S_Raspexi.xml  FD3S_Sens1__800x600.xml  FD3S_Sens2__800x600.xml  FullDigital-InjectorDuty_Accel_GForce_Force.xml  FullDigital-Power_Accel_AccelTimer_GForce_Force.xml  FullDigital-Speed_RPM_Power_Gear.xml  FullDigital-Speed_RPM_WaterTemp_Gear_InjectorDuty.xml  Full_Digital_Dash.xml  Mazda_Sens1__800x600.xml  Nissan_Main_800x600.xml  Nissan_Subaru_Sens1__800x600.xml  Nissan_Subaru_Sens2__800x600.xml  Power_Torque_Force_accel_800x600.xml  Race_1280_720.xml  Single_Boost_Guage_320_240.xml  Single_RPM_Guage_320_240.xml  Toyota_Main_800x600.xml  Toyota_Sens1__800x600.xml  Toyota_Sens2__800x600.xml
Dashboards/Nissan_Subaru/: Single_Power_Gauge_320_240.xml  Single_Speed_Gauge_320_240.xml
Dashboards/SmallScreen/: Single_Digital_AccelGForce_7Seg.xml  Single_Digital_AccelTimer_7Seg.xml  Single_Digital_Accel_7Seg.xml  Single_Digital_Force_7Seg.xml  Single_Digital_Gear_7Seg.xml  Single_Digital_InjectorDuty_7Seg.xml  (+6 more)
GaugeFonts/: Readme.txt
(+171 files in other folders)
